<resources>
    <string name="app_name">YGM</string>
    <string name="full_name">Full Name</string>
    <string name="leave">Leave</string>
    <string name="present">Present</string>
    <string name="work_done">Work Done</string>
    <string name="half_leave">Half Leave</string>
    <string name="full_leave">Full Leave</string>
    <string name="submit">Submit</string>
    <string name="reason_of_leave">Reason of Leave</string>
    <string name="data_added_successfully">Data Added Successfully</string>
    <string name="ygm">YGM</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="your_password">Your password</string>
    <string name="login_here_to_access_your_account">Login here to access your account.</string>
    <string name="welcome_to_ygm">Welcome to YGM</string>
    <string name="login">Login</string>
    <string name="select_an_option">Select an option:</string>
    <string name="second_half">Second Half</string>
    <string name="first_half">First Half</string>
    <string name="scope_of_work">scope of work:</string>
    <string name="scoping">scoping</string>
    <string name="back">Back</string>
    <string name="your_data_has_been_saved">Your data has been saved.</string>
    <string name="success">Success</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="add_work">Add Work</string>
    <string name="welcome_to">Welcome to</string>
    <string name="date">Date</string>
    <string name="ast">*</string>
    <string name="next">Next</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="reason">Reason:</string>
    <string name="one_day">One day</string>
    <string name="more_than_one_day">More than one day</string>
    <string name="no_previous_leaves_found">No previous leaves found!</string>
    <string name="employee_id">Employee ID</string>
    <string name="add_leave">Add Leave</string>
    <string name="choose_leave_type">choose leave type</string>
    <string name="today_s_your_full_day_leave">Today\'s your full day leave</string>
    <string name="total_leave_s">total leave(s):</string>
    <string name="total_day_s">total day(s):</string>
</resources>